prise en compte de JwtGenerator dans les classes utilisateur + Refactoring du code